# foamlib

./: .devcontainer.json  .dockerignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.md.backup  UV_BUILD_MIGRATION.md  paper.bib  paper.md  pyproject.toml  setup.py  test_context_managers.py  test_marimo.py
.github/workflows/: ci.yml  docker.yml  dockerhub-description.yml  pypi-publish.yml
benchmark/: benchmark.py  requirements.txt  ruff.toml
docs/: cases.rst  changelog.rst  conf.py  example.rst  files.rst  index.rst  installation.rst  parametricstudy.rst  postprocessing.rst  quickstart.rst  ruff.toml  typing.rst
docs/_static/: custom.css
docs/api/: cases.rst  exceptions.rst  files.rst  index.rst
docs/examples/: index.rst
docs/tutorials/: index.rst
example/parametricStudy/: createStudy.py  createStudyFromCSV.py  createStudyGrid.py  dashboard.py  gatherResults.py  parameter_study.json  plotResults.py  runStudy.py
example/parametricStudy/damBreak/system/: setFieldsDict  simulationParameters  simulationsParameters
example/parametricStudy/results/: forces.csv  probe_u.csv  surfaceHeights.csv  surface_heights.csv
examples/: .ruff.toml
examples/basic/: diffusioncheck.py
examples/parametricStudy/: .ruff.toml  createStudyGrid.py  gatherResults.py  parastudy.csv
foamlib/: __init__.py  __main__.py  _cases.py  _dictionaries.py  _subprocesses.py  _util.py
foamlib/_cases/: __init__.py  _async.py  _base.py  _log_monitor.py  _recipes.py  _run.py  _slurm.py  _subprocess.py  _sync.py  _util.py  async_.py  base.py  slurm.py  sync.py
foamlib/_dictionaries/: __init__.py  _base.py  _files.py  _parsing.py  _serialization.py  _values.py
foamlib/_files/: __init__.py  _base.py  _fields.py  _files.py  _io.py  _parsing.py  _serialization.py  _types.py  _typing.py  _util.py  files.py  types.py
foamlib/_files/_parsing/: __init__.py  _elements.py  _grammar.py  parsed.py
foamlib/postprocessing/: __init__.py  load_tables.py  tableReader.py  table_reader.py
foamlib/preprocessing/: _caseModifier.py  _case_modifier.py  _grid_parameter_sweep.py  _ofDict.py  _of_dict.py  case_modifier.py  csvGenerator.py  grid_parameter_sweep.py  of_dict.py  parameterStudy.py  parameter_study.py  system.py
rust_src/: lib.rs
src/foamlib/: __init__.py  typing.py
src/foamlib/_c/: __init__.py  _skip.pyi  skip.c
src/foamlib/_cases/: __init__.py  _async.py  _base.py  _run.py  _slurm.py  _subprocess.py  _sync.py  _util.py  async_.py  base.py  slurm.py  sync.py
src/foamlib/_files/: __init__.py  _common.py  _io.py  _normalization.py  _serialization.py  _types.py  _typing.py  _util.py  files.py  types.py
src/foamlib/_files/_parsing/: __init__.py  _elements.py  _exceptions.py  _grammar.py  _parser.py  _re.py  _regex_parser.py  _skip_ext.c  exceptions.py  parsed.py  parsing.py
src/foamlib/_files/_parsing/_c_ext/: parse_ascii.c
src/foamlib/_files/_parsing/_old/: _elements.py  _grammar.py
src/foamlib/postprocessing/: load_tables.py  table_reader.py
src/foamlib/preprocessing/: __init__.py  case_modifier.py  grid_parameter_sweep.py  of_dict.py  parameter_study.py  system.py
tests/: ruff.toml  test_basic.py  test_c_extensions.py  test_dictionaries.py  test_example.py  test_flange.py  test_flange_async.py  test_pitz.py  test_pitz_async.py  test_serialization.py
tests/test_cases/: test_async_edge_cases.py  test_cavity.py  test_cavity_async.py  test_context_managers.py  test_context_managers_async.py  test_flange.py  test_flange_async.py  test_foamcase_edge_cases.py  test_pitz.py  test_pitz_async.py
tests/test_dictionaries/: test_files.py  test_parsing.py  test_serialization.py
tests/test_examples/: test_diffusioncheck.py  test_diffusioncheck_alt.py
tests/test_files/: test_binary_float32.py  test_common.py  test_dumpb.py  test_dumps.py  test_field_operations.py  test_files.py  test_foamfile_edge_cases.py  test_foamfile_header_edit.py  test_io.py  test_issue_319.py  test_multimapping.py  test_multimapping_views.py  test_parsing.py  test_parsing_exceptions.py  test_serialization.py  test_serialization_edge_cases.py  test_trailing_newline_fix.py  test_types.py  test_util.py
tests/test_files/test_parsing/: test_advanced.py  test_basic.py  test_coded.py  test_decompose_par.py  test_fields.py  test_fv_schemes.py  test_intermediate.py  test_issue_393.py  test_issue_411.py  test_issue_605.py  test_issue_761.py  test_issue_773.py  test_issue_binary_scalar_list.py  test_loads.py  test_multi.py  test_multidict_as_dict.py  test_multimapping.py  test_nan_inf.py  test_parsing_edge_cases.py  test_pipe_expressions.py  test_poly_face_list.py  test_poly_mesh.py  test_re.py
tests/test_postprocessing/: test_load_output_files.py  test_load_tables.py  test_postprocessing_edge_cases.py  test_readers.py  test_table_reader_additional.py
tests/test_postprocessing/Cases/fluidHeight_02/grid1/: case.json  parameters.json
tests/test_postprocessing/Cases/fluidHeight_02/grid2/: case.json  explicitOperators.xml  parameters.json
tests/test_postprocessing/Cases/fluidHeight_03/grid3/: case.json  parameters.json
tests/test_postprocessing/postProcessing/freeSurface/0.05/: U_freeSurface.raw  p_freeSurface.raw
tests/test_postprocessing/postProcessing/freeSurface/0.1/: U_freeSurface.raw  p_freeSurface.raw
tests/test_postprocessing/postProcessing/freeSurface/0.15/: U_freeSurface.raw  p_freeSurface.raw
tests/test_postprocessing/postProcessing/freeSurface/0.25/: U_freeSurface.raw  p_freeSurface.raw
tests/test_postprocessing/postProcessing/freeSurface/0.3/: U_freeSurface.raw  p_freeSurface.raw
tests/test_postprocessing/postProcessing/freeSurface/0.35/: U_freeSurface.raw  (+1 more)
tests/test_preprocessing/: parameter_study.json  test_case_modifier.py  test_csvGenerator.py  test_csv_generator.py  test_grid_generator.py  test_ofDict.py  test_of_dict.py  test_of_dict_additional.py  test_parameter_study_additional.py  test_parastudy2.csv  test_preprocessing_edge_cases.py  test_system.py
tests/test_preprocessing/dictionaries/: testDictionary
(+55 files in other folders)
