[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foamlib"
description = "A Python interface for interacting with OpenFOAM"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Typing :: Typed",
]

dependencies = [
    "aioshutil>=1,<2",
    "numpy>=1,<3",
    "pyparsing>=3.1.2,<4",
    "rich>=13,<15",
    "typing-extensions>=4,<5; python_version<'3.11'",
]

dynamic = ["version"]

[dependency-groups]
parameter_sweep = [
    "pandas>=1,<3",
    "pydantic>=2.0.0,<3",
    "defusedxml>=0.7.1,<0.8",
]
lint = ["ruff"]
typing = [
    "mypy>=1,<2",
    "scipy-stubs; python_version>='3.10'",
]
test = [
    "pytest>=7,<9",
    "pytest-asyncio>=0.21,<0.27",
    "pytest-cov",
    "scipy>=1,<2",
]
docs = [
    "ruff",
    "sphinx>=5,<9",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid"
]
dev = [
    {include-group = "parameter_sweep"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
    {include-group = "docs"},
]

[project.optional-dependencies]
docs = [
    "ruff",
    "sphinx>=5,<9",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid"
]

[project.urls]
Homepage = "https://github.com/gerlero/foamlib"
Repository = "https://github.com/gerlero/foamlib"
Documentation = "https://foamlib.readthedocs.io"

[tool.hatch.version]
path = "foamlib/__init__.py"

[tool.mypy]
packages = [
    "foamlib",
    "tests",
]
strict = true
disable_error_code = ["unused-ignore"]

[tool.ruff]
exclude = [
    "example"
]

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ANN401",
    "ARG004",
    "C901",
    "COM812",
    "E501",
    "ISC001",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PTH123",
    "PYI041",
    "S101",
    "S603",
    "SLF001",
    "TC001",
    "TC003",
    "TID252",
    "UP007"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

