[build-system]
requires = ["uv_build>=0.8.14,<0.10.0"]
build-backend = "uv_build"

[project]
name = "foamlib"
version = "1.3.14"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
description = "A Python interface for interacting with OpenFOAM"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "aioshutil>=1,<2",
    "multicollections>=1.0.4,<2",
    "numpy>=1,<3",
    "pyparsing>=3.1.2,<4",
    "rich>=13,<15",
    "typing-extensions>=4.5,<5; python_version<'3.13'",
]

[project.optional-dependencies]
preprocessing = [
    "pandas>=1,<3",
    "pydantic>=2.0.0,<3",
    "eval-type-backport>=0.2,<0.3; python_version<'3.10'",
]
postprocessing = [
    "pandas>=1,<3",
    "defusedxml>=0.7.1,<0.8",
]
examples = [
    "plotly>=6,<7",
    "scipy>=1,<2",
    "foamlib[preprocessing]",
    "foamlib[postprocessing]",
]

[project.urls]
Homepage = "https://github.com/gerlero/foamlib"
Repository = "https://github.com/gerlero/foamlib"
Documentation = "https://foamlib.readthedocs.io"

[dependency-groups]
preprocessing = ["foamlib[preprocessing]"]
postprocessing = ["foamlib[postprocessing]"]
examples = ["foamlib[examples]"]
lint = ["ruff"]
typing = [
    {include-group = "preprocessing"},
    {include-group = "postprocessing"},
    "pandas-stubs",
    "scipy-stubs; python_version>='3.10'",
    "ty",
    "types-defusedxml",
]
test = [
    {include-group = "preprocessing"},
    {include-group = "postprocessing"},
    "pytest>=7,<9",
    "pytest-asyncio>=0.21,<1.3",
    "pytest-cov",
    "scipy>=1,<2",
]
docs = [
    "foamlib[preprocessing]",
    "foamlib[postprocessing]",
    "sphinx>=5,<9",
    "sphinx_rtd_theme",
    "sphinxcontrib-mermaid"
]
benchmark = ["PyFoam"]
dev = [
    {include-group = "preprocessing"},
    {include-group = "postprocessing"},
    {include-group = "examples"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "benchmark"},
]

[tool.uv.build-backend]
module-root = "."

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ANN401",
    "ARG004",
    "C901",
    "COM812",
    "E501",
    "ISC001",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PYI041",
    "S101",
    "S603",
    "SLF001",
    "TID252"
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
